<resources>
    <string name="app_name">ProyectoForo</string>
    <string name="iniciar_Sesion">Iniciar Sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Texto_inicio">Bienvenido a la aplicación proyecto Foro, para hacer ingreso por favor presione el botón de registrarse, si ya está registrado presione el botón iniciar Sesión.\n

\nOpciones del Foro\n
o	Ordenar los foros por la cantidad de comentarios.\n
o	Crear un foro.\n
o	Al seleccionar unos de los foros, puede ingresar a comentar dicho foro.\n
</string>
    <string name="nombre_Usurio">Nombre de Usuario</string>
    <string name="pw">Contraseña</string>
    <string name="Correo">Correo Electronico</string>
    <string name="title_activity_foros">Foros</string>
    <string name="Titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="Usuario">Usuario</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tituloForo">TituloForo</string>
    <string name="descripcionForo">DescripcionForo</string>
    <string name="UForo">UForo</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="escribe_mensaje">Escribe Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="crearForo">Crear Foro</string>
    <string name="cerrarSesiom">Cerrar Sesion</string>
    <string name="tema">Tema</string>
    <string name="mayor_menor">Ordenar Menor a Mayor</string>
    <string name="menor_mayor">Ordenar Mayor a Menor</string>
    <string name="cantidadComen">numero</string>
    <string name="comentarios">Co :</string>
</resources>