<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:id="@+id/ContenerForo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Titulo" />

            <TextView
                android:id="@+id/Comentarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comentarios" />

            <TextView
                android:id="@+id/cantidadComentarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/cantidadComen" />
        </LinearLayout>

        <TextView
            android:id="@+id/Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion" />

        <TextView
            android:id="@+id/Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Usuario" />

    </LinearLayout>

</androidx.cardview.widget.CardView>