<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.ActivityComenForo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TituloForo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="titulo" />

            <TextView
                android:id="@+id/Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/descripcionForo" />

            <TextView
                android:id="@+id/UsuarioForo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/UForo" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recicleComentarios"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mensaje"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/escribe_mensaje"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <Button
                android:id="@+id/enviarComentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>